tests/functional/lang/eval-fail-genericClosure-element-missing-key.err.exp
error:
       … while calling the 'genericClosure' builtin
         at /pwd/lang/eval-fail-genericClosure-element-missing-key.nix:1:1:
            1| builtins.genericClosure {
             | ^
            2|   startSet = [ { nokey = 1; } ];

       … in one of the attrsets generated by (or initially passed to) builtins.genericClosure

       error: attribute 'key' missing
